# LOCAL_RAG_CHATBOT

./: README.md  data.csv  main.py  pyproject.toml  vector.py
chroma_langchain_db/: chroma.sqlite3
