[project]
name = "rag-local-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-core>=0.3.63",
    "langchain-ollama>=0.3.3",
    "pandas>=2.2.3",
]
